# no_std_training

./: README.md
Assembly_Lang/: README.md
C_Lang/: README.md
C_Lang/001_x86_64_Assembly/a01_assembly_c_hello/: README.md
C_Lang/002_arm_Assembly/a01_arm_assembly_c_hello/: .gitignore  README.md
C_Lang/002_arm_Assembly/a01_arm_assembly_c_hello/src/: main.c
C_Lang/a01_assembly_c_hello/src/: main.c
Cpp_Lang/: README.md
Rust_lang/: README.md
Rust_lang/001_x86_64_Assembly/a01_no_std_rust/: Cargo.toml
Rust_lang/001_x86_64_Assembly/a02_no_std_no_main/: README.md
Rust_lang/001_x86_64_Assembly/a03_no_std_main_start/: Cargo.toml
Rust_lang/001_x86_64_Assembly/a03_no_std_main_start/src/: main.rs
Rust_lang/001_x86_64_Assembly/a04_no_std_main_start_part2/: Cargo.toml  README.md
Rust_lang/001_x86_64_Assembly/a04_no_std_main_start_part2/.cargo/: config.toml
Rust_lang/002_ARM_Assembly/: README.md
Rust_lang/002_ARM_Assembly/a01_arm_assembly_no_std/: .gitignore  Cargo.toml  README.md  linker.ld
Rust_lang/002_ARM_Assembly/a01_arm_assembly_no_std/.cargo/: config.toml
Rust_lang/002_ARM_Assembly/a01_arm_assembly_no_std/src/: main.rs
Rust_lang/a01_no_std_rust/src/: main.rs
Rust_lang/a02_no_std_no_main/: Cargo.toml  README.md  hello
Rust_lang/a02_no_std_no_main/src/: main.rs
Rust_lang/a03_no_std_main_start/: README.md
Rust_lang/a03_no_std_main_start/.cargo/: config.toml
Rust_lang/a04_no_std_main_start_part2/: README.md
Rust_lang/a04_no_std_main_start_part2/src/: main.rs
